--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "nodemon": "^1.18.4",
     "regenerator-runtime": "^0.12.1",
     "style-loader": "^0.23.0",
+    "supertest": "^3.3.0",
     "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0",
     "webpack-command": "^0.4.1",
