--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "author": "david_hong",
   "license": "UNLICENSED",
   "scripts": {
-    "react-dev": "webpack -d --watch",
+    "react-dev": "webpack -d --watch --detectOpenHandles",
     "server-dev": "node server/index.js",
-    "test": "jest"
+    "test": "jest --watch"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -28,14 +28,19 @@
     "console-stamp": "^0.2.6",
     "css-loader": "^1.0.0",
     "enzyme": "^3.6.0",
+    "enzyme-adapter-react-16": "^1.5.0",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor.git",
     "express": "^4.16.3",
     "faker": "^4.1.0",
     "jest": "^23.5.0",
     "jest-enzyme": "^6.0.4",
+    "jest-express": "^1.6.1",
     "mongoose": "^5.2.13",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.4",
+    "npm-run-all": "^4.1.3",
+    "puppeteer": "^1.8.0",
+    "react-test-renderer": "^16.5.0",
     "regenerator-runtime": "^0.12.1",
     "style-loader": "^0.23.0",
     "supertest": "^3.3.0",
