--- a/package.json
+++ b/package.json
@@ -6,30 +6,37 @@
   "author": "david_hong",
   "license": "UNLICENSED",
   "scripts": {
-    "react-dev": "webpack -d --watch --detectOpenHandles",
-    "server-dev": "node server/index.js",
-    "test": "jest --watch"
+    "dev": "node server/index.js",
+    "test": "jest --watch",
+    "seed": "node database/seeder.js"
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "classnames": "^2.2.6",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.4",
     "prop-types": "^15.6.2",
     "react": "^16.5.0",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.0",
-    "react-hot-loader": "^4.3.6"
+    "react-hot-loader": "^4.3.6",
+    "react-motion": "^0.5.2",
+    "reactstrap": "^6.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.1",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "autoprefixer": "^9.1.5",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.0-beta.6",
     "body-parser": "^1.18.3",
+    "bootstrap": "^4.1.3",
     "console-stamp": "^0.2.6",
     "css-loader": "^1.0.0",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
-    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor.git",
     "express": "^4.16.3",
     "faker": "^4.1.0",
     "jest": "^23.5.0",
@@ -39,9 +46,12 @@
     "morgan": "^1.9.1",
     "nodemon": "^1.18.4",
     "npm-run-all": "^4.1.3",
+    "postcss-loader": "^3.0.0",
+    "precss": "^3.1.2",
     "puppeteer": "^1.8.0",
     "react-test-renderer": "^16.5.0",
     "regenerator-runtime": "^0.12.1",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
     "supertest": "^3.3.0",
     "webpack": "^4.17.2",
