--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+## git rm -r --cached jestOutput ##
+jestOutput/
+
 ## MAC files ##
 .DS_Store
 
@@ -24,4 +27,4 @@ coverage
 build/
 dist/
 
-jestOutput/
+
