...Button ready for review

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^16.5.0",
     "react-hot-loader": "^4.3.6",
     "react-motion": "^0.5.2",
-    "reactstrap": "^6.4.0"
+    "reactstrap": "^6.4.0",
+    "svg-inline-react": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.1",
@@ -54,6 +55,7 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
     "supertest": "^3.3.0",
+    "svg-inline-loader": "^0.8.0",
     "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0",
     "webpack-command": "^0.4.1",
