--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
+    "cors": "^2.8.4",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4",
     "prop-types": "^15.6.2",
