--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4",
     "prop-types": "^15.6.2",
+    "rc-dropdown": "^2.2.0",
+    "rc-menu": "^7.4.8",
     "react": "^16.5.0",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.0",
