--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "bundle": "WEBPACK_MODE='production' webpack -d -w",
     "start": "nodemon server/index.js",
     "dev": "node server/index.js",
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "build": "webpack --config webpack.prod.js"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -27,7 +28,8 @@
     "react-hot-loader": "^4.3.6",
     "react-motion": "^0.5.2",
     "reactstrap": "^6.4.0",
-    "svg-inline-react": "^3.1.0"
+    "svg-inline-react": "^3.1.0",
+    "webpack-merge": "^4.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.0.1",
