database connected to mlab

--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "spotify-header",
-  "jest": {},
   "version": "1.0.0",
   "description": "header_for_spotify",
   "author": "david_hong",
@@ -29,7 +28,13 @@
     "react-motion": "^0.5.2",
     "reactstrap": "^6.4.0",
     "svg-inline-react": "^3.1.0",
-    "webpack-merge": "^4.1.4"
+    "webpack-merge": "^4.1.4",
+    "mongoose": "^5.2.13",
+    "morgan": "^1.9.1",
+    "nodemon": "^1.18.4",
+    "console-stamp": "^0.2.6",
+    "express": "^4.16.3",
+    "body-parser": "^1.18.3"
   },
   "devDependencies": {
     "@babel/core": "^7.0.1",
@@ -39,20 +44,14 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.0-beta.6",
-    "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
-    "console-stamp": "^0.2.6",
     "css-loader": "^1.0.0",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
-    "express": "^4.16.3",
     "faker": "^4.1.0",
     "jest": "^23.5.0",
     "jest-enzyme": "^6.0.4",
     "jest-express": "^1.6.1",
-    "mongoose": "^5.2.13",
-    "morgan": "^1.9.1",
-    "nodemon": "^1.18.4",
     "npm-run-all": "^4.1.3",
     "postcss-loader": "^3.0.0",
     "precss": "^3.1.2",
