--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "seed": "node database/seeder.js",
-    "bundle": "webpack -d -w",
+    "bundle": "webpack -w --config webpack.dev.js",
     "start": "nodemon server/index.js",
     "dev": "node server/index.js",
     "test": "jest --watch",
@@ -41,10 +41,10 @@
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "autoprefixer": "^9.1.5",
-    "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.0-beta.6",
     "bootstrap": "^4.1.3",
+    "compression-webpack-plugin": "^2.0.0",
     "css-loader": "^1.0.0",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
